2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in:
	s/.gtkrc-1.2-gnome2/.gtkrc-1.2-gnome2\*/ in
	files-to-ignore so we catch the temporary .new
	file.

2005-07-29  Mark McLoughlin  <mark@skynet.ie>

	* lib/config.py.in: add ".fonts.cache-1*" to 
	files-to-ignore.
	
	* lib/dirmonitor.py:
	(DirectoryMonitor.__should_ignore_dir),
	(DirectoryMonitor.__should_ignore_file): add support
	for shell-style globs in the lists of files and
	directories to ignore.

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* lib/userdb.py: minor fix to DV's fix for bug #311796

Fri Jul 29 12:09:38 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py: second part of #311796 fix, unescape once the
	  URI base composition has been done if it is a local path.

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* lib/config.py.in: add ~/.profile_cache to directories-to-ignore
	in case it gets created (which it shouldn't)

2005-07-29  Mark McLoughlin  <markmc@redhat.com>

	* lib/userdb.py:
	(UserDatabase.__profile_name_to_location): make the debug
	spew a bit more clear.
	
	* admin-tool/sabayon-apply, lib/userprofile.py: make
	the debug spew not crash if the profile name contains
	a '%' character.

Thu Jul 28 12:05:25 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/cache.py: trying to fix #309273, avoid creating ~/.profile_cache
	  if no remote resources are used.

Thu Jul 28 11:14:59 CEST 2005 Daniel Veillard <veillard@redhat.com>

	* lib/userdb.py: tried to fix #311796 problem of profilename to
	  URI conversion.

2005-07-28  Mark McLoughlin  <markmc@redhat.com>

	Fixes bug #311798

	* lib/config.py.in: add ~/.thumbnails to 
	directories-to-ignore

2005-07-27  Mark McLoughlin  <markmc@redhat.com>

	* lib/protosession.py: remove stale X lock files and
	unix sockets. Now that Xnest runs as the sabayon
	user and not root, Xnest won't have permission to
	overwrite someone else's files.

2005-07-25  Mark McLoughlin  <markmc@redhat.com>
